# xinyuan

./: .env.example  .gitignore  .npmrc  DEPLOY.md  README.md  actions_new.txt  actions_settings2.txt  bridge_ai.mjs  broken_section.txt  build_log.txt  build_log2.txt  build_out.txt  create_release.txt  dns_spoof.py  edit_release.txt  edit_removed.txt  edit_rm2.txt  edit_uploaded.txt  electron_build_log.txt  electron_build_log2.txt  electron_log.txt  gen_cert.py  index.html  launch.bat  launch.ps1  launcher.mjs  package-lock.json  package.json  png_text.txt  pnpm-lock.yaml  pnpm-workspace.yaml  processes.json  release_page_snapshot.txt  rerun_page.txt  run3_snapshot.txt  run4_status.txt  run6_job.txt  run6_status.txt  run_electron.bat  sdkconfig  (+19 more)
electron/: _apply_fixes.js  _cleanup.js  _fix3.ps1  _fix_init.ps1  _fix_trim_log.ps1  _vad_fix.ps1  ai-conversation.js  audio-bridge.js  database.js  edge-tts-main.js  edge-tts.js  main.cjs  main.js  ota-server.cjs  preload.cjs  preload.js  sapi-tts.mjs  servo.js  xiaozhi-bridge.js  xiaozhi-relay.js
esp32-audio-bridge/: esp32-audio-bridge.ino
main/: database.js  ipc.js
src/: App.css  (+3 more)
xin-yuan-cpp/: CMakeLists.txt
xin-yuan-cpp/resources/: style.qss
xin-yuan-cpp/src/: main.cpp
xin-yuan-cpp/src/core/: coze_client.cpp  coze_client.h  session_manager.cpp  session_manager.h
xin-yuan-cpp/src/ui/: chat_bubble.cpp  chat_bubble.h  chat_widget.cpp  chat_widget.h  emotion_tag.cpp  emotion_tag.h  main_window.cpp  main_window.h  settings_widget.cpp  settings_widget.h
xin-yuan-cpp/src/utils/: json_helper.cpp  json_helper.h
(+164 files in other folders)
